--- a/aesthetic/static/main.css
+++ b/aesthetic/static/main.css
@@ -119,7 +119,7 @@ form {
 
 .grid-container > div {
   background-color: white;
-  padding: 20px 20px 40px 20px;
+  padding: 20px;
   border-radius: 2px;
 }
 
@@ -223,7 +223,7 @@ form {
 }
 
 .record-form {
-	max-height: 600px;
+	max-height: 560px;
 	overflow: auto;
 }
 
