--- a/aesthetic/templates/profile.html
+++ b/aesthetic/templates/profile.html
@@ -63,7 +63,7 @@
 						{{ measure_form.hips(class="form-control mb-3") }}
 						{{ measure_form.thigh(class="form-control mb-3") }}
 						{{ measure_form.calf(class="form-control mb-3") }}
-						{{ measure_form.submit(class="btn btn-default btn-block", onClick="setTimeout(function(){window.location.href=window.location.href}, 1);") }}
+						{{ measure_form.submit(class="btn btn-default btn-block") }}
 					</form>
 				</div>
 			</div>
