--- a/aesthetic/templates/home.html
+++ b/aesthetic/templates/home.html
@@ -5,9 +5,10 @@
 	<div class="media content">
 		<div class="media-body">
 			<h4><a class="media-heading" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h4>
-			<p class="text-muted">Posted on <a href="#">{{ post.date_posted.strftime("%Y-%m-%d") }}</a> by <a href="{{ url_for('profile', username=post.author.username) }}">{{ post.author.username }}</a></p>
+			<p class="text-muted">Posted on <a href="#">{{ post.date_posted.strftime("%Y-%m-%d") }}</a> by <a href="{{ url_for('profile', username=post.author.username) }}">{{ post.author.username }}</a></p>	
 			<p class="formatted">{{ post.content|markdown }}</p>
 			<br>
+			<p><a href="{{ url_for('post', post_id=post.id) }}">{{ count(post.comments) }} comments</a></p>
 		</div>
 	</div>
 {% endfor %}
