--- a/aesthetic/templates/post.html
+++ b/aesthetic/templates/post.html
@@ -12,4 +12,40 @@
 			<br>
 		</div>
 	</div>
+		
+	{% for comment in comments %}
+		<div class="media content border">
+			<div class="media-left">
+				<a href="{{ url_for('profile', username=comment.author.username) }}"><img src="{{ url_for('static', filename='profile_pics/' + comment.author.image_file) }}" class="media-object comment-img"></a>
+			</div>
+			<div class="media-body">
+				<p class="formatted"><a href="{{ url_for('profile', username=comment.author.username) }}">{{ comment.author.username }}</a> commented on <a href="#">{{ comment.date_posted.strftime("%Y-%m-%d") }}</a>:</p>
+				<p class="formatted">{{ comment.content|markdown }}</p>
+			</div>
+			<br>
+			<hr>
+		</div>
+	{% endfor %}
+	<div class="media content border">
+		<div class="media-body">
+			<form method="POST" action="">
+				{{ form.hidden_tag() }}
+				<div class="form-group">
+					{% if form.content.errors %}
+						{{ form.content(class="form-control is-invalid") }}
+						<div class="invalid-feedback">
+							{% for error in form.content.errors %}
+								<span>{{ error }}</span>
+							{% endfor %}
+						</div>
+					{% else %}
+						{{ form.content(class="form-control", rows="3") }}
+					{% endif %}
+				</div>
+				<div class="form-group">
+					{{ form.submit(class="btn btn-default btn-block") }}
+				</div>
+			</form>
+		</div>
+	</div>
 {% endblock content %}
