user posts and comments page, allowed goals to be set

--- a/aesthetic/static/main.css
+++ b/aesthetic/static/main.css
@@ -127,8 +127,13 @@ form {
 	text-align: center;
 }
 
+.profile-box div div a{
+	display: inline;
+	padding: 10px;
+}
+
 .login {
-	max-height: 520px;
+	max-height: 535px;
 	overflow: auto;
 }
 
