--- a/aesthetic/templates/user_posts.html
+++ b/aesthetic/templates/user_posts.html
@@ -24,9 +24,9 @@
 	{% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
 		{% if page_num %}
 			{% if posts.page == page_num %}
-				<a href="{{ url_for('home', page=page_num) }}" class="btn btn-secondary m-1 mb-4">{{ page_num }}</a>
+				<a href="{{ url_for('user_posts', page=page_num, username=user.username) }}" class="btn btn-secondary m-1 mb-4">{{ page_num }}</a>
 			{% else %}
-				<a href="{{ url_for('home', page=page_num) }}" class="btn btn-outline-secondary m-1 mb-4">{{ page_num }}</a>
+				<a href="{{ url_for('user_posts', page=page_num, username=user.username) }}" class="btn btn-outline-secondary m-1 mb-4">{{ page_num }}</a>
 			{% endif %}
 		{% else %}
 			...
