--- a/aesthetic/templates/layout.html
+++ b/aesthetic/templates/layout.html
@@ -22,11 +22,11 @@
 			<a href="/" class="logo">Acquire Aesthetics</a>
 			<div class="header-right">
 				{% if current_user.is_authenticated %}
-					<a href="{{ url_for('profile', username=current_user.username) }}">profile</a>
-					<a href="{{ url_for('logout') }}">logout</a>
+					<a href="{{ url_for('users.profile', username=current_user.username) }}">profile</a>
+					<a href="{{ url_for('users.logout') }}">logout</a>
 				{% else %}
-					<a href="{{ url_for('login') }}">login</a>
-					<a href="{{ url_for('register') }}">register</a>
+					<a href="{{ url_for('users.login') }}">login</a>
+					<a href="{{ url_for('users.register') }}">register</a>
 				{% endif %}
 			</div>
 		</div>
@@ -34,11 +34,11 @@
 	<div class="navbar">
 		<ul>
 			<div class="container">
-				<li><a href="{{ url_for('home') }}">home</a></li>
-				<li><a href="{{ url_for('about') }}">about</a></li>
+				<li><a href="{{ url_for('main.home') }}">home</a></li>
+				<li><a href="{{ url_for('main.about') }}">about</a></li>
 				<div class="nav-right">
 					{% if current_user.is_authenticated %}
-						<li><a href="{{ url_for('create_post') }}">create post</a></li>
+						<li><a href="{{ url_for('posts.create_post') }}">create post</a></li>
 					{% endif %}
 				</div>
 			</div>		
