--- a/aesthetic/templates/post.html
+++ b/aesthetic/templates/post.html
@@ -4,8 +4,8 @@
 		<div class="media-body">
 			<h4 class="media-heading">{{ post.title }}</h4>
 			{% if current_user == post.author %}
-				<a href="{{ url_for('delete_post', post_id=post.id) }}" onclick="return confirm('Are you sure you want to delete this post?');" class="red-link">delete</a>
-				<a href="{{ url_for('update_post', post_id=post.id) }}" class="red-link">edit</a>
+				<a href="{{ url_for('posts.delete_post', post_id=post.id) }}" onclick="return confirm('Are you sure you want to delete this post?');" class="red-link">delete</a>
+				<a href="{{ url_for('posts.update_post', post_id=post.id) }}" class="red-link">edit</a>
 			{% endif %}
 			<p class="text-muted">Posted on <a href="#">{{ post.date_posted.strftime("%Y-%m-%d") }}</a> by <a href="#">{{ post.author.username }}</a></p>
 			<p class="formatted">{{ post.content|markdown }}</p>
@@ -16,10 +16,10 @@
 	{% for comment in comments %}
 		<div class="media content border">
 			<div class="media-left">
-				<a href="{{ url_for('profile', username=comment.author.username) }}"><img src="{{ url_for('static', filename='profile_pics/' + comment.author.image_file) }}" class="media-object comment-img"></a>
+				<a href="{{ url_for('users.profile', username=comment.author.username) }}"><img src="{{ url_for('static', filename='profile_pics/' + comment.author.image_file) }}" class="media-object comment-img"></a>
 			</div>
 			<div class="media-body">
-				<p class="formatted"><a href="{{ url_for('profile', username=comment.author.username) }}">{{ comment.author.username }}</a> commented on <a href="#">{{ comment.date_posted.strftime("%Y-%m-%d") }}</a>:</p>
+				<p class="formatted"><a href="{{ url_for('users.profile', username=comment.author.username) }}">{{ comment.author.username }}</a> commented on <a href="#">{{ comment.date_posted.strftime("%Y-%m-%d") }}</a>:</p>
 				<p class="formatted">{{ comment.content|markdown }}</p>
 			</div>
 			<br>
