--- a/aesthetic/templates/user_posts.html
+++ b/aesthetic/templates/user_posts.html
@@ -6,11 +6,11 @@
 	{% for post in posts.items %}
 		<div class="media content">
 			<div class="media-body">
-				<h4><a class="media-heading" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h4>
-				<p class="text-muted">Posted on <a href="#">{{ post.date_posted.strftime("%Y-%m-%d") }}</a> by <a href="{{ url_for('profile', username=post.author.username) }}">{{ post.author.username }}</a></p>	
+				<h4><a class="media-heading" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h4>
+				<p class="text-muted">Posted on <a href="#">{{ post.date_posted.strftime("%Y-%m-%d") }}</a> by <a href="{{ url_for('users.profile', username=post.author.username) }}">{{ post.author.username }}</a></p>	
 				<p class="formatted">{{ post.content|markdown }}</p>
 				<br>
-				<p><a href="{{ url_for('post', post_id=post.id) }}">{{ count(post.comments) }} comments</a></p>
+				<p><a href="{{ url_for('posts.post', post_id=post.id) }}">{{ count(post.comments) }} comments</a></p>
 			</div>
 		</div>
 	{% endfor %}
@@ -24,9 +24,9 @@
 	{% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
 		{% if page_num %}
 			{% if posts.page == page_num %}
-				<a href="{{ url_for('user_posts', page=page_num, username=user.username) }}" class="btn btn-secondary m-1 mb-4">{{ page_num }}</a>
+				<a href="{{ url_for('users.user_posts', page=page_num, username=user.username) }}" class="btn btn-secondary m-1 mb-4">{{ page_num }}</a>
 			{% else %}
-				<a href="{{ url_for('user_posts', page=page_num, username=user.username) }}" class="btn btn-outline-secondary m-1 mb-4">{{ page_num }}</a>
+				<a href="{{ url_for('users.user_posts', page=page_num, username=user.username) }}" class="btn btn-outline-secondary m-1 mb-4">{{ page_num }}</a>
 			{% endif %}
 		{% else %}
 			...
