--- a/aesthetic/templates/about.html
+++ b/aesthetic/templates/about.html
@@ -2,9 +2,34 @@
 {% block content %}
 	<div class="media content">
 		<div class="media-body">
-			<h4 class="media-heading">What is this?</h4>
-			<p>Acquire Aesthetics is a site for lifters to track their progress through body measurements rather than the amount of weight they lift.</p>
+			<h4 class="media-heading mb-4">What is this?</h4>
+			<p>Most lifting programs record progress through the amount of weighted lifted each session.</p>
+			<p>This makes it difficult to keep track of one's aesthetic goals in a quantifiable manner.</p>
+			<p>Acquire Aesthetics is a site for lifters to document their aesthetic progress through body measurements.</p>
 			<br>
+			<h4 class="media-heading mb-4">Guidelines for taking body measurements:</h4>
+			<p>The easiest and most effective method is to use a soft tape measure to record the girth or circumference of each body part.</p>
+			<p>There are 8 different body parts that are recommended to be measured regularly.</p>
+			<ol>
+				<li><b>Neck</b> - Standing, wrap the tape measure around the Adam's apple.</li>
+				<li><b>Shoulders</b> - Standing, wrap the tape measure around the widest part of the shoulders.</li>
+				<li><b>Biceps</b> - Measure at its largest girth with the arms at the sides.</li>
+				<li><b>Chest</b> - Standing, measure with breath out above the nipple.</li>
+				<li><b>Waist</b> - Standing, measure at the navel.</li>
+				<li><b>Hips</b> - Measure at the largest point, where the glutes protrude.</li>
+				<li><b>Thigh</b> - Standing, measure at the largest girth, below the glutes.</li>
+				<li><b>Calf</b> - Seated if you are measuring yourself or standing if you have a partner, measure at its largest girth.</li>
+			</ol>
+			<p>Here are some tips to make sure your measurements are consistent and accurate.</p>
+			<ol>
+				<li><b>Refrain from exercise before measuring</b> - Blood rushing to certain muscle groups may distort your actual proportions.</li>
+				<li><b>Relax your muscles</b> - Different muscle groups will change in size differently when flexed.</li>
+				<li><b>Do not stretch the tape</b> - The tape should be pulled to where it is lying flat against the skin all the way around.</li>
+				<li><b>Be consistent</b> - The pressure you put on the tape isn’t important; just make sure it is the same every time you do it. </li>
+				<li><b>Keep a journal</b> - Keep a journal to record measurements and note them accurately, such as with the services provided on this site.</li>
+			</ol>
+			<p>Sound good?</p> 
+			<h5><a href="{{ url_for('users.register') }}">Register!</a></h5>
 		</div>
 	</div>
 {% endblock content %}
