--- a/aesthetic/templates/user_posts.html
+++ b/aesthetic/templates/user_posts.html
@@ -7,7 +7,7 @@
 		<div class="media content">
 			<div class="media-body">
 				<h4><a class="media-heading" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h4>
-				<p class="text-muted">Posted on <a href="#">{{ post.date_posted.strftime("%Y-%m-%d") }}</a> by <a href="{{ url_for('users.profile', username=post.author.username) }}">{{ post.author.username }}</a></p>	
+				<p class="text-muted">Posted on <a href="#">{{ post.date_posted.strftime("%Y-%m-%d") }}</a> by <a href="{{ url_for('users.profile', username=post.author.username) }}">{{ post.author.username }}</a></p>
 				<p class="formatted">{{ post.content|markdown }}</p>
 				<br>
 				<p><a href="{{ url_for('posts.post', post_id=post.id) }}">{{ count(post.comments) }} comments</a></p>
@@ -16,7 +16,7 @@
 	{% endfor %}
 {% else %}
 	<div class="media content border">
-		<p>{{ user.username }} has not posted any comments yet.</p>
+		<p>{{ user.username }} has not created any posts yet.</p>
 	</div>
 {% endif %}
 
